--- a/public/404_old.html
+++ b/public/404_old.html
@@ -19,11 +19,8 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>AHHHH 404</h1>
-    <p> Instead of the page you requested I'm showing you a video about it. </p>
-    <iframe src="http://player.vimeo.com/video/26858445?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="400" height="225" frameborder="0"></iframe>
-    <br />
-    <p> Oh right -- sorry I got distracted there.  The page you're looking for looks like it's missing.  Sorry! </p>
+    <h1>The page you were looking for doesn't exist.</h1>
+    <p>You may have mistyped the address or the page may have moved.</p>
   </div>
 </body>
 </html>
