added a little text to the static html page to say what the website's about

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 <div id="abl_icon">
 	<h1>ABL</h1>
 </div>
+<div id="abl_about">
+	The master beer list for Atlanta's bars.
+</div>
 	<p id="coming_notice">9.16.2011</p>
 
 </body>
