--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <div id="abl_about">
 	The master beer list for Atlanta's bars.
 </div>
-	<p id="coming_notice">9.16.2011</p>
+	<p id="coming_notice">coming 9.16.2011</p>
 
 </body>
 </html>
