--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,11 @@
 <div id="abl_about">
 	The master beer list for Atlanta's bars.
 </div>
-	<p id="coming_notice">coming 9.16.2011</p>
+	<p id="coming_notice">
+		coming 9.16.2011
+	<br><br><br><br><br>
+		<a href="http://www.twitter.com/atlbeerlist" class="no_hover_background"><img src="http://twitter-badges.s3.amazonaws.com/t_small-a.png" alt="Follow atlbeerlist on Twitter"/></a>
+	</p>
 
 </body>
 </html>
